# rust-server-2024

./: Cargo.toml  Dockerfile  README.md  compose.yaml
bindings/: Merchant.ts  Product.ts  User.ts
src/: main.rs  mongodb.rs  routes.rs  utilities.rs
src/mongodb/: cdb.rs  db.rs  schemas.rs
src/mongodb/schemas/: merchants.rs  products.rs  users.rs
src/routes/: auth.rs  merchants.rs  mod.rs  products.rs  router.rs
src/routes/auth/: router.rs  sign_in.rs  sign_up.rs
src/routes/merchants/: create.rs  delete.rs  read.rs  router.rs  update.rs
src/routes/product/: mod.rs  product_router.rs
src/routes/products/: create.rs  delete.rs  read.rs  router.rs  update.rs
src/utilities/: auth.rs  cors.rs  error.rs  serde_helpers.rs  tracing.rs
