[package]
name = "rust-server-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
dotenvy = "0.15.7"
futures = "0.3.31"
mongodb = "3.1.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
